booki/css/style.css
/*** Général ***/
/* Font */
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');

/* Color */
:root {
    --first-color: #0065FC; /* var(--first-color) */
    --second-color: #DEEBFF; /* var(--second-color) */
    --third-color: #F2F2F2; /* var(--third-color) */
    --fourth-color: #fff; /* var(--fourth-color) */
}
/* * {
    border: 1px red solid;
}*/
body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    max-width: 1400px;
    font-family: 'Raleway', sans-serif;
}
h2 {
    font-weight: 700;
    font-size: 1.37em;
    line-height: 1.62;
}
h4 {
    font-weight: 700;
    line-height: 1.19em;
}
p {
    font-size: 0.87em;
    margin-top: 5px;
}
.filter, .filter button {
    font-weight: 700;
    font-size: 1.06em;
    line-height: 1.25em;
}
input, footer h3 {
    font-weight: 700;
    font-size: 1.12em;
    line-height: 1.31em;
}
.top-main-section p, footer p {
    font-weight: 400;
    font-size: 1em;
    line-height: 1.19em;
}
a {
    color: inherit;
    text-decoration: none;
}
/* Card Left & Right */
.card-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-left: 20px;
}
.card-content h4 {
    margin: 0;
}
/*** Header ***/
.img-logo {
    width: 3.8em;
    height: 1.2em;
}
nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 30px;
}
.navigation a {
    margin-right: 3.5em;
    font-weight: 500;
    font-size: 1em;
    line-height: 1.18em;
    color: #000;
}
.navigation a:hover {
    border-top: 2px var(--first-color) solid;
    color: var(--first-color);
    width: 100%;
    padding-top: 20px;
}
/*** Main ***/
.top-main-section {
    padding: 0 30px;
}
.top-main-section h2 {
    margin-bottom: 0;
}
.top-main-section p {
    margin: 0 0 20px 0;
}
.top-main-section .form {
    margin: 10px 0;
}
/* Search Bar */
.search-bar {
    outline: none;
    width: fit-content;
    border-radius: 5px;
    display: flex;
}
.search-bar i {
    background-color: var(--third-color);
    padding: 5px 15px;
    border-radius: 15px 0 0 15px;
    display: flex;
    align-items: center;
}
input {
    border: 2px solid var(--third-color);
    height: 2.44em;
}
input::placeholder {
    color: #000;
}
.btn-search-bar {
    border: none;
    padding: 5px 15px;
    background-color: var(--first-color);
    color: var(--fourth-color);
    border-radius: 0 15px 15px 0;
}
.filter {
    display: flex;
    align-items: center;
    margin-bottom: 10px;
}
.filter h4 {
    margin-right: 25px;
}
.filter button {
    height: 50px;
    border-radius: 25px;
    border: 2px solid var(--third-color);
    cursor: pointer;
    padding: 0 20px;
    margin-right: 25px;
    background-color: var(--fourth-color);
}
.filter button i {
    margin-right: 10px;
    color: var(--first-color);
}
.filter button:hover {
    background-color: var(--second-color);
}
.main-section-container {
    display: flex;
    justify-content: space-around;
    width: 100%;
}
.fa-icon {
    border: 2px solid var(--third-color);
    border-radius: 50%;
    color: var(--first-color);
    padding-top: 3px;
    margin-right: 10px;
    width: 24px;
    height: 24px;
    text-align: center;
}
/*** Card Location ***/
.card-location {
    background-color: var(--fourth-color);
    border-radius: 20px;
    height: 13.5em;
    margin: 0 5px 20px 0;
    box-shadow: 1px 2px 2px 1px rgba(0, 0, 0, 0.033);
}
.card-location img {
    width: 15.37em;
    height: 7.75em;
    border: 5px solid var(--fourth-color);
    border-radius: 20px 20px 0 0;
    object-fit: cover;
    padding: 1px;
}
.stars-location {
    color: var(--first-color);
}
.fa-grey {
    color: var(--third-color)
}
/* Left-section Location */
.left-section {
    background: var(--third-color);
    border-radius: 20px;
    max-width: 65%;
    height: 36.12em;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}
.left-section h2 {
    margin-left: 25px;
}
.card-left-section {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
}
.add-more-link {
    color: #000;
    font-weight: 700;
    font-size: 1.12em;
    margin: 0 0 20px 25px;
}
/* Right-section Popularity */
.right-section-title {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.right-section-title i {
    color: var(--first-color);
}
.right-section {
    background: var(--third-color);
    max-width: 30%;
    height: 36.12em;
    padding: 0 30px;
    border-radius: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.right-section h2 i {
    margin-left: 110px;
    color: #0065FC;
}
/* Card Popularity */
.card-popularity {
    background: var(--fourth-color);
    width: 21.43em;
    height: 8em;
    border-radius: 20px;
    display: flex;
    margin-bottom: 25px;
    padding: 5px;
    box-shadow: 1px 2px 2px 1px rgba(0, 0, 0, 0.033);
}
.card-popularity img {
    width: 8.56em;
    height: 8em;
    border-radius: 20px 0 0 20px;
    object-fit: cover;
}
/*** Activity Section ***/
article {
    padding: 0 30px;
}
/* Card Activity */
.activity {
    display: flex;
    justify-content: space-between;
}
.card-activity {
    background-color: #FFF;
    border-radius: 20px;
    box-shadow: 1px 2px 2px 1px var(--third-color);
}
.card-activity h4 {
    padding-left: 15px;
}
.card-activity img {
    width: 18.87em;
    height: 24.31em;
    border-radius: 20px 20px 0 0;
    object-fit: cover;
}
/*** Footer ***/
footer {
    background: var(--third-color);
    width: 83.2em;
    height: 14.06em;
    margin: 40px 31px 0;
    display: flex;
    justify-content: space-around;
    align-items: stretch;
}

footer div {
    padding-top: 30px;
}

/*** MEDIA QUERIES ***/
/* Mode Tablette */
@media screen and (max-width: 991px) {
    body {
        max-height: 100vh;
    }
    /* Header */
    nav {
        padding: 30px 30px 15px 30px;
    }
    /* Main Section */
    .main-section-container {
        display: flex;
        flex-direction: column;
    }
    .card-content {
        margin-left: 10px;
    }
    .card-content h4, p {
        margin-bottom: 3px;
    }
    .card-location, .card-popularity {
        font-size: 0.87em;
    }
    .add-more-link {
        margin-top: 30px;
    }
    /* Left Section */
    .left-section {
        height: 35em;
        width: 100%;
        margin-bottom: 50px;
        padding: 15px;
    }
    .card-location {
        width: 25.3%;
        height: 199px;
    }
    .card-left-section {
        justify-content: space-around;
    }
    /* Right Section */
    .right-section {
        width: 100%;
        height: 15.6em;
        padding: 0 38px;
    }
    .card-right-container {
        display: flex;
    }
    .card-popularity {
        width: 252px;
        height: 100%;
        margin-right: 20px;
    }
    .card-popularity img {
        width: 6.6em;
        border-radius: 20px 0 0 20px;
    }
    .card-content, h4, p {
        margin: 0;
    }
    .stars-location {
        margin-top: 20px;
    }
    /* Activity Card */
    .activity {
        max-width: 100%;
        justify-content: space-between;
    }
    .card-activity {
        max-width: 20%;
    }
    .card-activity img {
        max-width: 100%;
        height: 267px;
    }
    .card-activity h4 {
        padding: 15px;
    }
    /* Footer */
    footer {
        max-width: 95%;
        justify-content: space-evenly;
    }
    footer p {
        margin-bottom: 10px;
    }
}

